--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@apollo/server": "^4.7.3",
     "@nestjs/apollo": "^11.0.6",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^9.4.3",
     "@nestjs/graphql": "^11.0.6",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "graphql": "^16.6.0",
+    "joi": "^17.9.2",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
