--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dataloader": "^2.2.2",
     "graphql": "^16.6.0",
     "joi": "^17.9.2",
