--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migration:generate": "ts-node ./src/db/migration/generate.ts",
+    "migration:run": "ts-node ./src/db/migration/run.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
