버전 및 라이센스

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fullstack-project-server",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "version": "v1.0.0",
+  "description": "fullstack-application-server",
+  "author": "tre2man",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
