--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "migration:generate": "ts-node ./src/db/migration/generate.ts",
     "migration:run": "ts-node ./src/db/migration/run.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
