--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,15 @@ jobs:
   deploy:
     runs-on: ubuntu-20.04
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
-
       - name: Checkout source code.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          node-version: '18.x'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
